--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,8 +30,22 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: Enable caching
         uses: Swatinem/rust-cache@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
+      - name: Install dependencies
+        run: pnpm install
       - name: Run cargo test
         run: cargo test
+      - name: Run Build
+        run: pnpm build
+      - name: Run JavaScript tests
+        run: pnpm test:js
 
   lints:
     name: Lints
