--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
+      - name: Add wasm32-wasip1 target
+        run: rustup target add wasm32-wasip1
       - name: Enable caching
         uses: Swatinem/rust-cache@v2
       - name: Run cargo check
