--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,19 +7,6 @@ on:
   pull_request:
 
 jobs:
-  check:
-    name: Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
-      - name: Install stable toolchain
-        uses: dtolnay/rust-toolchain@stable
-      - name: Enable caching
-        uses: Swatinem/rust-cache@v2
-      - name: Run cargo check
-        run: cargo check
-
   test:
     name: Test suite
     runs-on: ubuntu-latest
@@ -28,22 +15,29 @@ jobs:
         uses: actions/checkout@v4
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
+      - name: Add wasm32-wasip1 target
+        run: rustup target add wasm32-wasip1
       - name: Enable caching
         uses: Swatinem/rust-cache@v2
-      - name: Run cargo test
-        run: cargo test
-
-  lints:
-    name: Lints
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
-      - name: Install stable toolchain
-        uses: dtolnay/rust-toolchain@stable
-      - name: Enable caching
-        uses: Swatinem/rust-cache@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
       - name: Run cargo fmt
         run: cargo fmt --all -- --check
       - name: Run cargo clippy
         run: cargo clippy -- -D warnings
+      - name: Install dependencies
+        run: pnpm install
+      - name: Run Build
+        run: pnpm build
+      - name: Run JavaScript tests
+        run: pnpm test:js
+      - name: Run cargo check
+        run: cargo check
+      - name: Run cargo test
+        run: cargo test
