--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "react-swc-suspense-tracker": ["."],
+      "react-swc-suspense-tracker": ["./dist/index.mjs"],
       "react-swc-suspense-tracker/*": ["./dist/*.mjs"],
     },
     "resolveJsonModule": true,
