--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:vitest": "pnpm --filter react-swc-suspense-tracker-tests test",
     "build": "npm run prettier && npm run build:js && npm run build:swc",
     "build:swc": "cargo build --release --target wasm32-wasip1 && ncp target/wasm32-wasip1/release/react_swc_suspense_tracker.wasm react_swc_suspense_tracker.wasm",
-    "build:js": "tsup src/index.tsx src/context.tsx --format esm --external react --clean --dts",
+    "build:js": "tsdown src/index.tsx src/context.tsx --format esm --external react --clean --dts",
     "prettier": "prettier --write \"{src,tests}/**/*.{ts,tsx}\"",
     "prepublishOnly": "npm run test && npm run build"
   },
@@ -50,7 +50,7 @@
     "react": "^19.1.0",
     "ncp": "2.0.0",
     "prettier": "^3.5.3",
-    "tsup": "^8.5.0",
+    "tsdown": "^0.12.7",
     "typescript": "^5.8.3"
   },
   "engines": {
