--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-swc-suspense-tracker",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "A development tool that tracks which React Suspense boundary catches thrown promises for easier debugging",
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -43,7 +43,7 @@
   "author": "Jan Nicklas",
   "license": "MIT",
   "devDependencies": {
-    "@swc/core": "^1.11.31",
+    "@swc/core": "1.12.1",
     "@types/node": "^22.15.30",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
