--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:js": "npm run test:vitest && tsc --noEmit && prettier --check \"{src,tests}/**/*.{ts,tsx}\"",
     "test:vitest": "pnpm --filter react-swc-suspense-tracker-tests test",
     "build": "npm run prettier && npm run build:js && npm run build:swc",
-    "build:swc": "cargo build --release --target wasm32-wasip1 && ncp target/wasm32-wasip1/release/react_swc_suspense_tracker.wasm react_swc_suspense_tracker.wasm",
+    "build:swc": "RUSTFLAGS=\"--cfg swc_ast_unknown\" cargo build --release --target wasm32-wasip1 && ncp target/wasm32-wasip1/release/react_swc_suspense_tracker.wasm react_swc_suspense_tracker.wasm",
     "build:js": "tsdown src/index.tsx src/context.tsx --format esm --external '/^react/' --clean --dts",
     "prettier": "prettier --write \"{src,tests}/**/*.{ts,tsx}\"",
     "prepublishOnly": "npm run test && npm run build"
@@ -43,7 +43,7 @@
   "author": "Jan Nicklas",
   "license": "MIT",
   "devDependencies": {
-    "@swc/core": "1.12.1",
+    "@swc/core": "1.15.0",
     "@types/node": "^22.15.30",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
